fixes bug 210119 "Browser crashes when opening URL" r=caillon sr=bzbarsky